--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -242,7 +242,6 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
-allow 179.35.2.10;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -255,6 +254,7 @@ allow 179.43.159.201;
 allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
+allow 179.73.189.33;
 allow 180.150.226.99;
 allow 185.100.85.132;
 allow 185.100.85.22;
@@ -1029,7 +1029,6 @@ allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
 allow 2407:3640:2207:8882::1;
-allow 2407:3640:2255:3978::1;
 allow 24.240.72.170;
 allow 2.56.10.36;
 allow 2.58.56.220;
@@ -1322,7 +1321,6 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1610,6 +1608,7 @@ allow 2a0e:bfc0:0:8::a84e;
 allow 2a0e:bfc0:0:d::d927;
 allow 2a0e:bfc7:0:3::2d83;
 allow 2a0e:bfc7:0:4::6e7a;
+allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:424c::1;
@@ -1700,7 +1699,6 @@ allow 2c0f:6c0:0:4::95ea;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1711,6 +1709,7 @@ allow 37.228.129.5;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1725,7 +1724,6 @@ allow 45.137.99.10;
 allow 45.137.99.216;
 allow 45.138.16.107;
 allow 45.138.16.113;
-allow 45.138.16.152;
 allow 45.138.16.178;
 allow 45.138.16.222;
 allow 45.138.16.230;
@@ -1763,6 +1761,7 @@ allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.152.10.22;
 allow 45.157.11.6;
+allow 45.159.250.144;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
@@ -1834,7 +1833,6 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1872,7 +1870,6 @@ allow 62.133.45.2;
 allow 62.133.63.146;
 allow 62.171.137.169;
 allow 62.182.84.146;
-allow 62.72.44.160;
 allow 64.190.76.10;
 allow 64.190.76.11;
 allow 64.190.76.12;
@@ -1900,6 +1897,7 @@ allow 78.159.131.96;
 allow 79.100.235.29;
 allow 79.127.129.160;
 allow 80.241.60.207;
+allow 80.67.167.81;
 allow 80.67.172.162;
 allow 80.82.78.14;
 allow 80.94.92.106;
