--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -122,7 +122,6 @@ allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
 allow 2407:3640:2207:8882::1;
-allow 2407:3640:2255:3978::1;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
@@ -409,7 +408,6 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:98a3::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -697,6 +695,7 @@ allow 2a0e:bfc0:0:8::a84e;
 allow 2a0e:bfc0:0:d::d927;
 allow 2a0e:bfc7:0:3::2d83;
 allow 2a0e:bfc7:0:4::6e7a;
+allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:424c::1;
