--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -242,7 +242,6 @@ set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.64;
 set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
-set_real_ip_from 179.35.2.10;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
@@ -255,6 +254,7 @@ set_real_ip_from 179.43.159.201;
 set_real_ip_from 179.43.159.78;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
+set_real_ip_from 179.73.189.33;
 set_real_ip_from 180.150.226.99;
 set_real_ip_from 185.100.85.132;
 set_real_ip_from 185.100.85.22;
@@ -1029,7 +1029,6 @@ set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8000:239::;
 set_real_ip_from 2402:1f00:8100:400::9;
 set_real_ip_from 2407:3640:2207:8882::1;
-set_real_ip_from 2407:3640:2255:3978::1;
 set_real_ip_from 24.240.72.170;
 set_real_ip_from 2.56.10.36;
 set_real_ip_from 2.58.56.220;
@@ -1322,7 +1321,6 @@ set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:98a3::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
@@ -1610,6 +1608,7 @@ set_real_ip_from 2a0e:bfc0:0:8::a84e;
 set_real_ip_from 2a0e:bfc0:0:d::d927;
 set_real_ip_from 2a0e:bfc7:0:3::2d83;
 set_real_ip_from 2a0e:bfc7:0:4::6e7a;
+set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0e:fa00:0:30::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:85c1:356:424c::1;
@@ -1700,7 +1699,6 @@ set_real_ip_from 2c0f:6c0:0:4::95ea;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
-set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.120.239.59;
@@ -1711,6 +1709,7 @@ set_real_ip_from 37.228.129.5;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
+set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
 set_real_ip_from 38.97.116.244;
@@ -1725,7 +1724,6 @@ set_real_ip_from 45.137.99.10;
 set_real_ip_from 45.137.99.216;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
-set_real_ip_from 45.138.16.152;
 set_real_ip_from 45.138.16.178;
 set_real_ip_from 45.138.16.222;
 set_real_ip_from 45.138.16.230;
@@ -1763,6 +1761,7 @@ set_real_ip_from 45.148.10.111;
 set_real_ip_from 45.148.10.169;
 set_real_ip_from 45.152.10.22;
 set_real_ip_from 45.157.11.6;
+set_real_ip_from 45.159.250.144;
 set_real_ip_from 45.61.185.172;
 set_real_ip_from 45.61.186.203;
 set_real_ip_from 45.61.187.200;
@@ -1834,7 +1833,6 @@ set_real_ip_from 5.181.80.107;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.227;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
@@ -1872,7 +1870,6 @@ set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.133.63.146;
 set_real_ip_from 62.171.137.169;
 set_real_ip_from 62.182.84.146;
-set_real_ip_from 62.72.44.160;
 set_real_ip_from 64.190.76.10;
 set_real_ip_from 64.190.76.11;
 set_real_ip_from 64.190.76.12;
@@ -1900,6 +1897,7 @@ set_real_ip_from 78.159.131.96;
 set_real_ip_from 79.100.235.29;
 set_real_ip_from 79.127.129.160;
 set_real_ip_from 80.241.60.207;
+set_real_ip_from 80.67.167.81;
 set_real_ip_from 80.67.172.162;
 set_real_ip_from 80.82.78.14;
 set_real_ip_from 80.94.92.106;
