--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -104,7 +104,6 @@ deny 2001:67c:e28:1::2;
 deny 2001:67c:e28:1::3;
 deny 2001:67c:e28:1::4;
 deny 2001:910:1400:107::2;
-deny 2001:9b0:25b:f700::20e;
 deny 2001:ac8:22:43::20e5:a7d7;
 deny 2001:b011:4006:d5b3::b;
 deny 2001:b030:2422::7234;
@@ -151,6 +150,7 @@ deny 2604:b480:3:6::2;
 deny 2605:2700:0:2:a800:ff:fe39:574;
 deny 2605:6400:10:1008:1111:1111:1111:1111;
 deny 2605:6400:10:1362::2;
+deny 2605:6400:10:1ab:2605:6400:10:1ab;
 deny 2605:6400:10:44f::1;
 deny 2605:6400:10:58f:8768:8283:1a62:bdc6;
 deny 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -408,6 +408,7 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:98a3::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
@@ -555,7 +556,6 @@ deny 2a0b:f4c2:2::35;
 deny 2a0b:f4c2:2::36;
 deny 2a0b:f4c2:2::37;
 deny 2a0b:f4c2:2::38;
-deny 2a0b:f4c2:2::39;
 deny 2a0b:f4c2::24;
 deny 2a0b:f4c2:2::40;
 deny 2a0b:f4c2:2::41;
@@ -565,23 +565,19 @@ deny 2a0b:f4c2:2::44;
 deny 2a0b:f4c2:2::45;
 deny 2a0b:f4c2:2::46;
 deny 2a0b:f4c2:2::47;
-deny 2a0b:f4c2:2::48;
 deny 2a0b:f4c2:2::49;
 deny 2a0b:f4c2::25;
-deny 2a0b:f4c2:2::50;
 deny 2a0b:f4c2:2::51;
 deny 2a0b:f4c2:2::52;
 deny 2a0b:f4c2:2::53;
 deny 2a0b:f4c2:2::54;
 deny 2a0b:f4c2:2::55;
 deny 2a0b:f4c2:2::56;
-deny 2a0b:f4c2:2::57;
 deny 2a0b:f4c2:2::58;
 deny 2a0b:f4c2:2::59;
 deny 2a0b:f4c2::26;
 deny 2a0b:f4c2:2::60;
 deny 2a0b:f4c2:2::61;
-deny 2a0b:f4c2:2::62;
 deny 2a0b:f4c2:2::63;
 deny 2a0b:f4c2::27;
 deny 2a0b:f4c2::28;
