--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -101,7 +101,6 @@ set_real_ip_from 108.59.12.3;
 set_real_ip_from 108.61.189.136;
 set_real_ip_from 109.104.153.22;
 set_real_ip_from 109.169.33.163;
-set_real_ip_from 109.228.160.190;
 set_real_ip_from 109.69.67.17;
 set_real_ip_from 109.70.100.1;
 set_real_ip_from 109.70.100.2;
@@ -125,7 +124,6 @@ set_real_ip_from 121.78.28.166;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 123.58.200.119;
 set_real_ip_from 125.212.241.131;
-set_real_ip_from 125.253.56.119;
 set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
 set_real_ip_from 130.193.10.21;
@@ -434,7 +432,6 @@ set_real_ip_from 185.220.101.35;
 set_real_ip_from 185.220.101.36;
 set_real_ip_from 185.220.101.37;
 set_real_ip_from 185.220.101.38;
-set_real_ip_from 185.220.101.39;
 set_real_ip_from 185.220.101.4;
 set_real_ip_from 185.220.101.40;
 set_real_ip_from 185.220.101.41;
@@ -444,23 +441,19 @@ set_real_ip_from 185.220.101.44;
 set_real_ip_from 185.220.101.45;
 set_real_ip_from 185.220.101.46;
 set_real_ip_from 185.220.101.47;
-set_real_ip_from 185.220.101.48;
 set_real_ip_from 185.220.101.49;
 set_real_ip_from 185.220.101.5;
-set_real_ip_from 185.220.101.50;
 set_real_ip_from 185.220.101.51;
 set_real_ip_from 185.220.101.52;
 set_real_ip_from 185.220.101.53;
 set_real_ip_from 185.220.101.54;
 set_real_ip_from 185.220.101.55;
 set_real_ip_from 185.220.101.56;
-set_real_ip_from 185.220.101.57;
 set_real_ip_from 185.220.101.58;
 set_real_ip_from 185.220.101.59;
 set_real_ip_from 185.220.101.6;
 set_real_ip_from 185.220.101.60;
 set_real_ip_from 185.220.101.61;
-set_real_ip_from 185.220.101.62;
 set_real_ip_from 185.220.101.63;
 set_real_ip_from 185.220.101.64;
 set_real_ip_from 185.220.101.65;
@@ -645,6 +638,7 @@ set_real_ip_from 193.189.100.203;
 set_real_ip_from 193.189.100.204;
 set_real_ip_from 193.189.100.205;
 set_real_ip_from 193.189.100.206;
+set_real_ip_from 193.218.118.156;
 set_real_ip_from 193.218.118.160;
 set_real_ip_from 193.218.118.173;
 set_real_ip_from 193.218.118.178;
@@ -701,6 +695,7 @@ set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.48.35;
 set_real_ip_from 198.98.50.199;
 set_real_ip_from 198.98.51.189;
+set_real_ip_from 198.98.51.249;
 set_real_ip_from 198.98.57.151;
 set_real_ip_from 198.98.57.74;
 set_real_ip_from 198.98.62.158;
@@ -818,7 +813,6 @@ set_real_ip_from 2001:67c:e28:1::2;
 set_real_ip_from 2001:67c:e28:1::3;
 set_real_ip_from 2001:67c:e28:1::4;
 set_real_ip_from 2001:910:1400:107::2;
-set_real_ip_from 2001:9b0:25b:f700::20e;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4006:d5b3::b;
 set_real_ip_from 2001:b030:2422::7234;
@@ -1059,6 +1053,7 @@ set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1362::2;
+set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
 set_real_ip_from 2605:6400:10:44f::1;
 set_real_ip_from 2605:6400:10:58f:8768:8283:1a62:bdc6;
 set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -1317,6 +1312,7 @@ set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:98a3::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
@@ -1464,7 +1460,6 @@ set_real_ip_from 2a0b:f4c2:2::35;
 set_real_ip_from 2a0b:f4c2:2::36;
 set_real_ip_from 2a0b:f4c2:2::37;
 set_real_ip_from 2a0b:f4c2:2::38;
-set_real_ip_from 2a0b:f4c2:2::39;
 set_real_ip_from 2a0b:f4c2::24;
 set_real_ip_from 2a0b:f4c2:2::40;
 set_real_ip_from 2a0b:f4c2:2::41;
@@ -1474,23 +1469,19 @@ set_real_ip_from 2a0b:f4c2:2::44;
 set_real_ip_from 2a0b:f4c2:2::45;
 set_real_ip_from 2a0b:f4c2:2::46;
 set_real_ip_from 2a0b:f4c2:2::47;
-set_real_ip_from 2a0b:f4c2:2::48;
 set_real_ip_from 2a0b:f4c2:2::49;
 set_real_ip_from 2a0b:f4c2::25;
-set_real_ip_from 2a0b:f4c2:2::50;
 set_real_ip_from 2a0b:f4c2:2::51;
 set_real_ip_from 2a0b:f4c2:2::52;
 set_real_ip_from 2a0b:f4c2:2::53;
 set_real_ip_from 2a0b:f4c2:2::54;
 set_real_ip_from 2a0b:f4c2:2::55;
 set_real_ip_from 2a0b:f4c2:2::56;
-set_real_ip_from 2a0b:f4c2:2::57;
 set_real_ip_from 2a0b:f4c2:2::58;
 set_real_ip_from 2a0b:f4c2:2::59;
 set_real_ip_from 2a0b:f4c2::26;
 set_real_ip_from 2a0b:f4c2:2::60;
 set_real_ip_from 2a0b:f4c2:2::61;
-set_real_ip_from 2a0b:f4c2:2::62;
 set_real_ip_from 2a0b:f4c2:2::63;
 set_real_ip_from 2a0b:f4c2::27;
 set_real_ip_from 2a0b:f4c2::28;
@@ -1824,6 +1815,7 @@ set_real_ip_from 5.181.80.107;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.227;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
@@ -1860,6 +1852,7 @@ set_real_ip_from 57.128.220.107;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.133.63.146;
 set_real_ip_from 62.171.137.169;
+set_real_ip_from 62.182.84.146;
 set_real_ip_from 64.190.76.10;
 set_real_ip_from 64.190.76.11;
 set_real_ip_from 64.190.76.12;
@@ -1949,6 +1942,7 @@ set_real_ip_from 91.208.75.4;
 set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.236.91;
 set_real_ip_from 91.219.237.39;
+set_real_ip_from 91.227.114.153;
 set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.243.24.163;
