--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -927,7 +927,6 @@ set_real_ip_from 204.8.96.86;
 set_real_ip_from 204.8.96.87;
 set_real_ip_from 204.8.96.88;
 set_real_ip_from 204.8.96.89;
-set_real_ip_from 205.185.113.180;
 set_real_ip_from 205.185.113.8;
 set_real_ip_from 205.185.116.215;
 set_real_ip_from 205.185.116.34;
@@ -1063,7 +1062,6 @@ set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
 set_real_ip_from 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
 set_real_ip_from 2605:6400:20:1a8:f5f2:4a28:b5ed:931d;
 set_real_ip_from 2605:6400:20:3ea:c2a3:1162:7224:e5df;
-set_real_ip_from 2605:6400:20:482:3920:1829:1839:1293;
 set_real_ip_from 2605:6400:20:769:e559:5c8f:a3e9:aed1;
 set_real_ip_from 2605:6400:20:be7::1;
 set_real_ip_from 2605:6400:20:c26:5163:253e:1ef6:d887;
@@ -1362,7 +1360,6 @@ set_real_ip_from 2a09:61c0::22;
 set_real_ip_from 2a09:61c0::beef;
 set_real_ip_from 2a09:b280:fe01:61::a;
 set_real_ip_from 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
-set_real_ip_from 2a0b:64c0:f802:1::a;
 set_real_ip_from 2a0b:64c0:f802:4c::a;
 set_real_ip_from 2a0b:7140:1:1:5054:ff:fe12:2305;
 set_real_ip_from 2a0b:7140:6:1:5054:ff:fed8:5956;
@@ -1626,6 +1623,54 @@ set_real_ip_from 2a0f:e586:f:f:a052:2166:bef9:a432;
 set_real_ip_from 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
 set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
+set_real_ip_from 2a10:1fc0:10::19eb:717b;
+set_real_ip_from 2a10:1fc0:10::28fc:90d4;
+set_real_ip_from 2a10:1fc0:10::2a17:5b54;
+set_real_ip_from 2a10:1fc0:10::2cf4:6ba2;
+set_real_ip_from 2a10:1fc0:10::2d91:1a2d;
+set_real_ip_from 2a10:1fc0:10::3903:457;
+set_real_ip_from 2a10:1fc0:10::3919:de17;
+set_real_ip_from 2a10:1fc0:10::3a1:5e9f;
+set_real_ip_from 2a10:1fc0:10::3dc5:e694;
+set_real_ip_from 2a10:1fc0:10::3eb3:d1d0;
+set_real_ip_from 2a10:1fc0:10::3ec1:2b1e;
+set_real_ip_from 2a10:1fc0:10::40d8:83c;
+set_real_ip_from 2a10:1fc0:10::42d2:f78b;
+set_real_ip_from 2a10:1fc0:10::5138:4dfa;
+set_real_ip_from 2a10:1fc0:10::5719:261d;
+set_real_ip_from 2a10:1fc0:10::61d9:7617;
+set_real_ip_from 2a10:1fc0:10::61e2:c84d;
+set_real_ip_from 2a10:1fc0:10::627f:3c31;
+set_real_ip_from 2a10:1fc0:10::694a:c359;
+set_real_ip_from 2a10:1fc0:10::6b4c:30fc;
+set_real_ip_from 2a10:1fc0:10::6c2e:469a;
+set_real_ip_from 2a10:1fc0:10::6d92:d6ab;
+set_real_ip_from 2a10:1fc0:10::6fde:4b8d;
+set_real_ip_from 2a10:1fc0:10::792f:38b4;
+set_real_ip_from 2a10:1fc0:10::895d:abf9;
+set_real_ip_from 2a10:1fc0:10::8a03:d023;
+set_real_ip_from 2a10:1fc0:10::8b78:d42e;
+set_real_ip_from 2a10:1fc0:10::8d4d:eca2;
+set_real_ip_from 2a10:1fc0:10::9a73:d4f2;
+set_real_ip_from 2a10:1fc0:10::9d80:c9f7;
+set_real_ip_from 2a10:1fc0:10::9e08:e765;
+set_real_ip_from 2a10:1fc0:10::a3a5:49da;
+set_real_ip_from 2a10:1fc0:10::a458:8b37;
+set_real_ip_from 2a10:1fc0:10::a63c:724c;
+set_real_ip_from 2a10:1fc0:10::b571:1205;
+set_real_ip_from 2a10:1fc0:10::bf3f:d195;
+set_real_ip_from 2a10:1fc0:10::c129:61a1;
+set_real_ip_from 2a10:1fc0:10::c385:c7fa;
+set_real_ip_from 2a10:1fc0:10::c7c7:2f84;
+set_real_ip_from 2a10:1fc0:10::d5a6:a292;
+set_real_ip_from 2a10:1fc0:10::d5d0:db30;
+set_real_ip_from 2a10:1fc0:10::d6b7:b3e9;
+set_real_ip_from 2a10:1fc0:10::dbe0:6173;
+set_real_ip_from 2a10:1fc0:10::dbe9:7852;
+set_real_ip_from 2a10:1fc0:10::e4c8:9020;
+set_real_ip_from 2a10:1fc0:10::ea87:5496;
+set_real_ip_from 2a10:1fc0:10::fa6c:cac5;
+set_real_ip_from 2a10:1fc0:10::fdb0:ba7f;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a10:c800:1:f7f8:0:1ce:1ce:babe;
@@ -1725,7 +1770,6 @@ set_real_ip_from 45.138.16.69;
 set_real_ip_from 45.138.16.76;
 set_real_ip_from 45.138.87.142;
 set_real_ip_from 45.139.50.202;
-set_real_ip_from 45.139.50.204;
 set_real_ip_from 45.141.215.110;
 set_real_ip_from 45.141.215.111;
 set_real_ip_from 45.141.215.114;
@@ -1793,7 +1837,6 @@ set_real_ip_from 45.9.156.100;
 set_real_ip_from 45.9.156.101;
 set_real_ip_from 45.9.168.108;
 set_real_ip_from 45.9.168.22;
-set_real_ip_from 45.94.31.26;
 set_real_ip_from 45.94.31.68;
 set_real_ip_from 45.95.169.104;
 set_real_ip_from 45.95.169.109;
@@ -1806,6 +1849,7 @@ set_real_ip_from 46.182.21.248;
 set_real_ip_from 46.23.109.25;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
+set_real_ip_from 46.249.49.183;
 set_real_ip_from 46.30.188.218;
 set_real_ip_from 46.38.243.210;
 set_real_ip_from 47.254.142.180;
@@ -1908,6 +1952,30 @@ set_real_ip_from 84.19.182.20;
 set_real_ip_from 84.211.226.13;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 85.239.41.130;
+set_real_ip_from 85.239.55.11;
+set_real_ip_from 85.239.55.110;
+set_real_ip_from 85.239.55.112;
+set_real_ip_from 85.239.55.114;
+set_real_ip_from 85.239.55.123;
+set_real_ip_from 85.239.55.132;
+set_real_ip_from 85.239.55.168;
+set_real_ip_from 85.239.55.173;
+set_real_ip_from 85.239.55.174;
+set_real_ip_from 85.239.55.184;
+set_real_ip_from 85.239.55.189;
+set_real_ip_from 85.239.55.192;
+set_real_ip_from 85.239.55.201;
+set_real_ip_from 85.239.55.228;
+set_real_ip_from 85.239.55.230;
+set_real_ip_from 85.239.55.239;
+set_real_ip_from 85.239.55.24;
+set_real_ip_from 85.239.55.249;
+set_real_ip_from 85.239.55.25;
+set_real_ip_from 85.239.55.250;
+set_real_ip_from 85.239.55.31;
+set_real_ip_from 85.239.55.37;
+set_real_ip_from 85.239.55.51;
+set_real_ip_from 85.239.55.80;
 set_real_ip_from 85.90.196.46;
 set_real_ip_from 85.93.218.204;
 set_real_ip_from 86.54.28.49;
@@ -1949,6 +2017,30 @@ set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.236.91;
 set_real_ip_from 91.219.237.39;
 set_real_ip_from 91.227.114.153;
+set_real_ip_from 91.227.77.107;
+set_real_ip_from 91.227.77.108;
+set_real_ip_from 91.227.77.119;
+set_real_ip_from 91.227.77.125;
+set_real_ip_from 91.227.77.139;
+set_real_ip_from 91.227.77.158;
+set_real_ip_from 91.227.77.160;
+set_real_ip_from 91.227.77.181;
+set_real_ip_from 91.227.77.193;
+set_real_ip_from 91.227.77.200;
+set_real_ip_from 91.227.77.208;
+set_real_ip_from 91.227.77.209;
+set_real_ip_from 91.227.77.226;
+set_real_ip_from 91.227.77.229;
+set_real_ip_from 91.227.77.237;
+set_real_ip_from 91.227.77.25;
+set_real_ip_from 91.227.77.31;
+set_real_ip_from 91.227.77.36;
+set_real_ip_from 91.227.77.44;
+set_real_ip_from 91.227.77.48;
+set_real_ip_from 91.227.77.51;
+set_real_ip_from 91.227.77.54;
+set_real_ip_from 91.227.77.62;
+set_real_ip_from 91.227.77.97;
 set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.243.24.163;
