--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -157,7 +157,6 @@ set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
 set_real_ip_from 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
 set_real_ip_from 2605:6400:20:1a8:f5f2:4a28:b5ed:931d;
 set_real_ip_from 2605:6400:20:3ea:c2a3:1162:7224:e5df;
-set_real_ip_from 2605:6400:20:482:3920:1829:1839:1293;
 set_real_ip_from 2605:6400:20:769:e559:5c8f:a3e9:aed1;
 set_real_ip_from 2605:6400:20:be7::1;
 set_real_ip_from 2605:6400:20:c26:5163:253e:1ef6:d887;
@@ -455,7 +454,6 @@ set_real_ip_from 2a09:61c0::22;
 set_real_ip_from 2a09:61c0::beef;
 set_real_ip_from 2a09:b280:fe01:61::a;
 set_real_ip_from 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
-set_real_ip_from 2a0b:64c0:f802:1::a;
 set_real_ip_from 2a0b:64c0:f802:4c::a;
 set_real_ip_from 2a0b:7140:1:1:5054:ff:fe12:2305;
 set_real_ip_from 2a0b:7140:6:1:5054:ff:fed8:5956;
@@ -719,6 +717,54 @@ set_real_ip_from 2a0f:e586:f:f:a052:2166:bef9:a432;
 set_real_ip_from 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
 set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
+set_real_ip_from 2a10:1fc0:10::19eb:717b;
+set_real_ip_from 2a10:1fc0:10::28fc:90d4;
+set_real_ip_from 2a10:1fc0:10::2a17:5b54;
+set_real_ip_from 2a10:1fc0:10::2cf4:6ba2;
+set_real_ip_from 2a10:1fc0:10::2d91:1a2d;
+set_real_ip_from 2a10:1fc0:10::3903:457;
+set_real_ip_from 2a10:1fc0:10::3919:de17;
+set_real_ip_from 2a10:1fc0:10::3a1:5e9f;
+set_real_ip_from 2a10:1fc0:10::3dc5:e694;
+set_real_ip_from 2a10:1fc0:10::3eb3:d1d0;
+set_real_ip_from 2a10:1fc0:10::3ec1:2b1e;
+set_real_ip_from 2a10:1fc0:10::40d8:83c;
+set_real_ip_from 2a10:1fc0:10::42d2:f78b;
+set_real_ip_from 2a10:1fc0:10::5138:4dfa;
+set_real_ip_from 2a10:1fc0:10::5719:261d;
+set_real_ip_from 2a10:1fc0:10::61d9:7617;
+set_real_ip_from 2a10:1fc0:10::61e2:c84d;
+set_real_ip_from 2a10:1fc0:10::627f:3c31;
+set_real_ip_from 2a10:1fc0:10::694a:c359;
+set_real_ip_from 2a10:1fc0:10::6b4c:30fc;
+set_real_ip_from 2a10:1fc0:10::6c2e:469a;
+set_real_ip_from 2a10:1fc0:10::6d92:d6ab;
+set_real_ip_from 2a10:1fc0:10::6fde:4b8d;
+set_real_ip_from 2a10:1fc0:10::792f:38b4;
+set_real_ip_from 2a10:1fc0:10::895d:abf9;
+set_real_ip_from 2a10:1fc0:10::8a03:d023;
+set_real_ip_from 2a10:1fc0:10::8b78:d42e;
+set_real_ip_from 2a10:1fc0:10::8d4d:eca2;
+set_real_ip_from 2a10:1fc0:10::9a73:d4f2;
+set_real_ip_from 2a10:1fc0:10::9d80:c9f7;
+set_real_ip_from 2a10:1fc0:10::9e08:e765;
+set_real_ip_from 2a10:1fc0:10::a3a5:49da;
+set_real_ip_from 2a10:1fc0:10::a458:8b37;
+set_real_ip_from 2a10:1fc0:10::a63c:724c;
+set_real_ip_from 2a10:1fc0:10::b571:1205;
+set_real_ip_from 2a10:1fc0:10::bf3f:d195;
+set_real_ip_from 2a10:1fc0:10::c129:61a1;
+set_real_ip_from 2a10:1fc0:10::c385:c7fa;
+set_real_ip_from 2a10:1fc0:10::c7c7:2f84;
+set_real_ip_from 2a10:1fc0:10::d5a6:a292;
+set_real_ip_from 2a10:1fc0:10::d5d0:db30;
+set_real_ip_from 2a10:1fc0:10::d6b7:b3e9;
+set_real_ip_from 2a10:1fc0:10::dbe0:6173;
+set_real_ip_from 2a10:1fc0:10::dbe9:7852;
+set_real_ip_from 2a10:1fc0:10::e4c8:9020;
+set_real_ip_from 2a10:1fc0:10::ea87:5496;
+set_real_ip_from 2a10:1fc0:10::fa6c:cac5;
+set_real_ip_from 2a10:1fc0:10::fdb0:ba7f;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a10:c800:1:f7f8:0:1ce:1ce:babe;
