--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -104,6 +104,7 @@ allow 2001:67c:e28:1::2;
 allow 2001:67c:e28:1::3;
 allow 2001:67c:e28:1::4;
 allow 2001:910:1400:107::2;
+allow 2001:9b0:25b:f700::20e;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:d5b3::b;
 allow 2001:b030:2422::7234;
@@ -137,7 +138,6 @@ allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:9fef::1;
 allow 2602:fc24:12:a679::1;
-allow 2602:fc24:18:a378::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
@@ -385,7 +385,6 @@ allow 2a03:4000:66:15:18a0:6bff:fe90:3147;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
 allow 2a03:4000:7:dcc:14ac:f2ff:fea9:e4c7;
-allow 2a03:6f20:531::254;
 allow 2a03:e600:100::1;
 allow 2a03:e600:100::2;
 allow 2a03:e600:100::3;
